<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lint_launch_ament_cmake</name>
  <version>1.0.0</version>
  <description>A package providing cmake functions for linting launch files from the build.</description>

  <maintainer email="herve.audren@woven.toyota">Hervé Audren</maintainer>

  <license>Apache License 2.0</license>
  <!-- Some of the files in this package were based on files from roslaunch from ROS 1, -->
  <!-- which is why this is also licensed under BSD. -->
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>
  <buildtool_export_depend>lint_launch</buildtool_export_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>lint_launch</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
